Mobile: larger nav links and fix portfolio grid visibility

--- a/css/hamburguesaestilos.css
+++ b/css/hamburguesaestilos.css
@@ -67,6 +67,7 @@
 
     .menu ul li a{
         color: black;
+        font-size: 22px;
     }
 
     #selected{
